@@ -490,9 +490,11 @@ test_desc tests[] = {
 #ifdef MUS_BUILD_BACKEND_SLEEPY
     {"sleepypack1",		test_sleepypack1},
 #endif
+#if 0  // OmSettings currently disabled, and not used.  CME 20/6/2000
     {"omsettings1",		test_omsettings1},
     {"omsettings2",		test_omsettings2},
     {"omsettings3",		test_omsettings3},
+#endif
     {0, 0}
 };
 
